--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@ font-size:20px;
 <header>
 <nav> 
 <ul>
-<li><a href = "NurSyahiera.html">Nur Syahiera</a></li>
+<li><a href = "Index.html">Nur Syahiera</a></li>
 <li><a href = "about.html">About</a></li>
 <li><a href = "videos.html">Videos</a></li>
 <li><a href = "contact.html">Contact</a></li>
