--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ font-size:20px;
 <header>
 <nav> 
 <ul>
-<li><a href = "NurSyahiera.html">Nur Syahiera</a></li>
+<li><a href = "index.html">Nur Syahiera</a></li>
 <li><a href = "about.html">About</a></li>
 <li><a href = "videos.html">Videos</a></li>
 <li><a href = "contact.html">Contact</a></li>
